--- a/catalog.html
+++ b/catalog.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <title>Catalog</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" type="image/png" href="images/favicon.png">
   </head>
 
   <body>
